--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -28,6 +28,74 @@
 .container-banner {
   width: 100%;
   height: auto;
+
+  .l-banner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background: {
+      size: cover;
+      position: center;
+      repeat: no-repeat;
+    }
+    width: 100%;
+    border-bottom-left-radius: 50% 20%;
+    border-bottom-right-radius: 50% 20%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
+    &__textarea {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transform: translatey(-25%);
+      opacity: 0;
+      animation: fadein ease 2s forwards;
+
+      &__title {
+        text-align: center;
+      }
+
+      &__subhead {
+        text-align: center;
+      }
+    }
+
+    &__down {
+      position: absolute;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      bottom: 50px;
+      border-radius: 50%;
+      border: solid 3px $color-white;
+      height: 50px;
+      width: 50px;
+      cursor: pointer;
+      background-color: transparent;
+      transform: translatey(-25%);
+      opacity: 0;
+      animation: fadein ease 2s forwards;
+
+      &__chevron {
+        height: 100%;
+        width: 100%;
+        color: $color-white;
+
+        & svg {
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+
+    & :hover {
+      .l-banner {
+        &__down__chevron svg {
+          animation: float 700ms ease-in-out infinite;
+        }
+      }
+    }
+  }
 }
 
 .banner {
@@ -35,7 +103,6 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 300px;
   margin-bottom: 50px;
   background: {
     position: center;
@@ -55,77 +122,19 @@
   }
 }
 
-.l-banner {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  background: {
-    size: cover;
-    position: center;
-    repeat: no-repeat;
-  }
-  width: 100%;
-  border-bottom-left-radius: 50% 20%;
-  border-bottom-right-radius: 50% 20%;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
-  &__textarea {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transform: translatey(-25%);
-    opacity: 0;
-    animation: fadein ease 2s forwards;
-
-    &__title {
-      text-align: center;
-    }
-
-    &__subhead {
-      text-align: center;
-    }
-  }
-
-  &__down {
-    position: absolute;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    bottom: 50px;
-    border-radius: 50%;
-    border: solid 3px $color-white;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
-    background-color: transparent;
-    transform: translatey(-25%);
-    opacity: 0;
-    animation: fadein ease 2s forwards;
-
-    &__chevron {
-      height: 100%;
-      width: 100%;
-      color: $color-white;
-
-      & svg {
-        height: 100%;
-        width: 100%;
-      }
-    }
-  }
-
-  & :hover {
-    .l-banner {
-      &__down__chevron svg {
-        animation: float 700ms ease-in-out infinite;
-      }
-    }
-  }
-}
-
 @include desktop-layout {
   .banner {
     background-attachment: fixed;
+    height: 300px;
+
+    &__textarea {
+      flex-direction: column;
+      justify-content: flex-end;
+
+      &__title {
+        color: $color-white;
+      }
+    }
   }
   .l-banner {
     background-attachment: fixed;
@@ -156,17 +165,6 @@
       display: flex;
     }
   }
-
-  .banner {
-    &__textarea {
-      flex-direction: column;
-      justify-content: flex-end;
-
-      &__title {
-        color: $color-white;
-      }
-    }
-  }
 }
 
 @include mobile-layout {
@@ -194,10 +192,52 @@
   .banner {
     border-bottom-left-radius: 50% 20%;
     border-bottom-right-radius: 50% 20%;
+    height: 300px;
 
     &__textarea {
       position: fixed;
       height: $mobile-header-radius;
+      z-index: 4;
+      align-items: center;
+      margin: 0 70px 0 70px;
+
+      &__title {
+        color: $color-white;
+      }
+    }
+  }
+}
+
+@include tablet-layout {
+  .l-banner {
+    height: 400px;
+
+    &__textarea {
+      position: fixed;
+      height: $tablet-header-radius;
+      top: 0;
+      z-index: 4;
+      align-items: center;
+      margin: 0 70px 0 70px;
+
+      &__title {
+        color: $color-white;
+      }
+
+      &__subhead {
+        display: none;
+      }
+    }
+  }
+
+  .banner {
+    border-bottom-left-radius: 50% 20%;
+    border-bottom-right-radius: 50% 20%;
+    height: 400px;
+
+    &__textarea {
+      position: fixed;
+      height: $tablet-header-radius;
       z-index: 4;
       align-items: center;
       margin: 0 70px 0 70px;
