--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -131,6 +131,7 @@
       align-items: center;
     }
     .input-container {
+      top: 80px;
       flex-direction: row;
       width: 100vw;
       height: 100px;
