--- a/my-app/src/pages/action/action.scss
+++ b/my-app/src/pages/action/action.scss
@@ -1,8 +1,13 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-.realisations {
+#actions {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  
+  i {
+    font-size: 15px;
+  }
 }
